@startuml
title Diagramme de classes - Projet Bit Packing (2025)

package codagebits {
    interface CodeurBits {
        +int[] compresser(int[] tableau)
        +int[] decompresser(int[] tampon)
        +int acceder(int i)
    }

    class CodeurSansChev implements CodeurBits {
        -int k
        -int[] tampon
        +int[] compresser(int[] tableau)
        +int[] decompresser(int[] tampon)
        +int acceder(int i)
    }

    class CodeurAvecChev implements CodeurBits {
        -int k
        -int[] tampon
        +int[] compresser(int[] tableau)
        +int[] decompresser(int[] tampon)
        +int acceder(int i)
    }

    class CodeurDebordement implements CodeurBits {
        -int n
        -int kBase
        -int overflowCount
        -int offset
        -int[] tampon
        +int[] compresser(int[] tableau)
        +int[] decompresser(int[] tampon)
        +int acceder(int i)
    }

    class OutilsBits {
        +static int lireBits(int[] tab, long bitPos, int nbBits)
        +static void ecrireBits(int[] tab, long bitPos, int nbBits, int valeur)
        +static int bitsNecessaires(int valeur)
    }

    class FactoryCodeurBits {
        +static CodeurBits creer(String mode)
    }
}

package app {
    class BenchProto {
        +static double mesureMoyenneMs(Runnable f, int repetitions)
        +static double calculTransmission(double tailleKo, double debit, double latence)
    }

    class DemoEnonce {
        -double debit
        -double latence
        +main(String[] args)
        +void runCase(String titre, String mode, CodeurBits codeur, int[] data)
        +void afficherResultats()
        +void mesurerTransmission()
    }

    class Main {
        +main(String[] args)
    }
}

' Relations
CodeurBits <|.. CodeurSansChev
CodeurBits <|.. CodeurAvecChev
CodeurBits <|.. CodeurDebordement
FactoryCodeurBits --> CodeurBits
DemoEnonce --> FactoryCodeurBits
DemoEnonce --> BenchProto
DemoEnonce --> CodeurBits
CodeurDebordement --> OutilsBits
CodeurSansChev --> OutilsBits
CodeurAvecChev --> OutilsBits

@enduml
